--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,54 +33,52 @@
             </ul>
         </section>
         <section>
-            <ul>
-                <li>
-                    <div>
-                        <img src="./image/img.jpg-1" alt="Banking App Interface Concept">
-                        <div>Banking App Interface Concept App</div>
-                    </div>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./image/img.jpg-2" alt="Cashless Payment">
-                        <figcaption>Cashless Payment Marketing</figcaption>
-                    </figure>
-                </li>
-                <li>
+            <div>
+                <div>
+                    <img src="./image/img.jpg-1" alt="Banking App Interface Concept">
+                    <h5>Banking App Interface Concept </h5>
+                    <p>App</p>
+                </div>
+                <div>
+                    <img src="./image/img.jpg-2" alt="Cashless Payment">
+                    <h5>Cashless Payment </h5>
+                    <p>Marketing</p>
+                </div>
+                <div>
                     <figure>
                         <img src="./image/img.jpg-3" alt="Meditation App">
-                        <figcaption>Meditation App App</figcaption>
+                        <h5>Meditation App App</h5>
                     </figure>
-                </li>
-                <li>
+                </div>
+                <div>
                     <figure>
                         <img src="./image/img.jpg-4" alt="Taxi Service">
                         <figcaption>Taxi Service Marketing</figcaption>
                     </figure>
-                </li>
-                <li>
+                </div>
+                <div>
                     <figure>
                         <img src="./image/img.jpg-5" alt="Screen Illustrations">
                         <figcaption>Screen Illustrations Design</figcaption>
                     </figure>
-                </li>
-                <li>
+                </div>
+                <div>
                     <img src="./image/img.jpg-6" alt="Online Courses">
                     <figcaption>Online Courses Marketing</figcaption>
-                </li>
-                <li>
+                </div>
+                <div>
                     <img src="./image/img.jpg-7" alt="Instagram Stories Concept">
                     <figcaption>Instagram Stories Concept Design</figcaption>
-                </li>
-                <li>
+                </div>
+                <div>
                     <img src="./image/img.jpg-8" alt="Organic Food">
                     <figcaption>Organic Food Web Site</figcaption>
-                </li>
-                <li>
+                </div>
+                <div>
                     <img src="./image/img.jpg-9" alt="Fresh Coffee">
                     <figcaption>Fresh Coffee Web Site</figcaption>
-                </li>
-            </ul>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
